--- a/ferreteria-jsf/web/login.xhtml
+++ b/ferreteria-jsf/web/login.xhtml
@@ -62,7 +62,7 @@
                     
                     <!-- Intento de login fallido --> 
                     <!-- <% if(!username.isEmpty()) { %> -->
-                    <h:panelGroup rendered="#{false}">
+                    <h:panelGroup rendered="#{userLogged.loginError}">
                         <div class="alert alert-danger alert-dismissible" role="alert">
                             <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Cerrar</span></button>
                             <strong>Error</strong> La combinaci&oacute;n usuario contraseña es incorrecta.
