--- a/ferreteria-jsf/web/index.xhtml
+++ b/ferreteria-jsf/web/index.xhtml
@@ -25,7 +25,7 @@
                         <div class="row">
                             <h:outputLink value="compras/historial" class="col-md-3 btn-block btn btn-lg">historial</h:outputLink>
                             <h:outputLink value="productos" class="col-md-3 btn-block btn btn-lg">productos</h:outputLink>
-                            <h:outputLink value="usuarios" class="col-md-3 btn-block btn btn-lg">usuarios</h:outputLink>
+                            <h:commandLink action="usuarios" class="col-md-3 btn-block btn btn-lg">usuarios</h:commandLink>
                             <h:outputLink value="ordenes" class="col-md-3 btn-block btn btn-lg">ordenes</h:outputLink>
                             
                             <!-- THIS WERE ALL THE ODS REF LINKS IN CASE THE OUTPUTLINKS DONT WORK 
