--- a/ferreteria-jsf/web/products.xhtml
+++ b/ferreteria-jsf/web/products.xhtml
@@ -20,7 +20,7 @@
             <div class="col-md-10 col-md-offset-1">
                 <!-- BEGINS BREADCRUMBS -->
                 <ol class="breadcrumb">
-                    <li><a href="inicio">Inicio</a></li>
+                    <li><h:link outcome="inicio">Inicio</h:link></li>
                     <li class="active">Productos</li>
                 </ol>
                 <!-- ENDS BREADCRUMBS -->
