--- a/ferreteria-jsf/web/index.xhtml
+++ b/ferreteria-jsf/web/index.xhtml
@@ -26,13 +26,8 @@
                             <h:commandLink action="productos" class="col-md-3 btn-block btn btn-lg">productos</h:commandLink>
                             
                             <h:commandLink action="usuarios" class="col-md-3 btn-block btn btn-lg" rendered="#{userLogged.admin}">usuarios</h:commandLink>
+                            <h:commandLink action="historial" class="col-md-3 btn-block btn btn-lg" rendered="#{userLogged.admin}">Historial</h:commandLink>
                             
-                            <!-- THIS WERE ALL THE ODS REF LINKS IN CASE THE OUTPUTLINKS DONT WORK 
-                            <a href="compras/historial" class="col-md-3 btn-block btn btn-lg">historial</a>
-                            <a href="productos" class="col-md-3 btn-block btn btn-lg">productos</a>
-                            <a href="usuarios" class="col-md-3 btn-block btn btn-lg">usuarios</a>
-                            <a href="ordenes" class="col-md-3 btn-block btn btn-lg">ordenes</a>
-                            -->
                         </div>
                     </div>
                 </div>
