--- a/ferreteria-jsf/web/ordenes-pendiente.xhtml
+++ b/ferreteria-jsf/web/ordenes-pendiente.xhtml
@@ -35,12 +35,14 @@
                             <thead>
                                 <tr>
                                     <th>ID pedido</th>
+                                    <th>Usuario</th>
                                     <th>Generar orden</th>
                                 </tr>
                             </thead>
                             <ui:repeat value="#{ordenes.getListaCompras()}" var="fila">
                                 <tr>    
                                     <td><h:outputText title="Ver compra" value="#{fila.idPurchase}" rendered="#{!fila.done}"></h:outputText></td>
+                                    <td><h:outputText title="Usuario que realizo la compra" value="#{fila.users.username}" rendered="#{!fila.done}"></h:outputText></td>
                                     <td><h:commandButton action="#{ordenes.setDonePurchase(fila.idPurchase)}" title="Generar orden de piqueo para el pedido" class="btn btn-xs btn-info" value="Generar" rendered="#{!fila.done}"></h:commandButton></td>
                                 </tr>
                             </ui:repeat>
