--- a/ferreteria-jsf/web/ordenes-piqueo.xhtml
+++ b/ferreteria-jsf/web/ordenes-piqueo.xhtml
@@ -33,8 +33,8 @@
                             <thead>
                                 <tr>
                                     <th>Producto</th>
-                                    <th>Cantidad</th>
-                                    <th>Stock total</th>
+                                    <th>Cantidad a retirar</th>
+                                    <th>Stock sobrante</th>
                                 </tr>
                             </thead>
                             <ui:repeat value="#{ordenes.getListaDetalles()}" var="fila">
